@@ -1,3 +1,9 @@
+ace (6.1.7-1) experimental; urgency=low
+
+  * New upstream release.
+
+ -- Johnny Willemsen <jwillemsen@remedy.nl>  Thu, 27 Dec 2012 11:16:01 +0200
+
 ace (6.1.6-1) experimental; urgency=low
 
   * New upstream release.
