@@ -35,6 +35,7 @@
     <hr>
     We do have the documentation for previous releases
     <ul>
+      <LI><P><A HREF="6.1.7/html">6.1.7</A></P></LI>
       <LI><P><A HREF="6.1.6/html">6.1.6</A></P></LI>
       <LI><P><A HREF="6.1.5/html">6.1.5</A></P></LI>
       <LI><P><A HREF="6.1.4/html">6.1.4</A></P></LI>
