@@ -1,3 +1,6 @@
+USER VISIBLE CHANGES BETWEEN ACE-6.1.7 and ACE-6.1.8
+====================================================
+
 USER VISIBLE CHANGES BETWEEN ACE-6.1.6 and ACE-6.1.7
 ====================================================
 
